--- a/dApp/client/src/styles/index.scss
+++ b/dApp/client/src/styles/index.scss
@@ -22,7 +22,9 @@ code {
 
 .main {
   @include mixins.flex-center();
-  height: calc(100vh - 5rem);
+  min-height: calc(100vh - 5rem);
+  overflow: hidden;
+  
 }
 
 .even-shadow {
